@@ -543,7 +543,8 @@ class SaleOpportunityLine(sequence_ordered(), ModelSQL, ModelView):
     opportunity_state = fields.Function(
         fields.Selection('get_opportunity_states', "Opportunity State"),
         'on_change_with_opportunity_state')
-    product = fields.Many2One('product.product', 'Product', required=True,
+    product = fields.Many2One(
+        'product.product', "Product",
         domain=[
             If(Eval('opportunity_state').in_(['lead', 'opportunity'])
                 & ~(Eval('quantity', 0) < 0),
@@ -553,8 +554,12 @@ class SaleOpportunityLine(sequence_ordered(), ModelSQL, ModelView):
         states=_states)
     quantity = fields.Float(
         "Quantity", digits='unit', required=True, states=_states)
-    unit = fields.Many2One('product.uom', 'Unit', required=True,
-        states=_states)
+    unit = fields.Many2One(
+        'product.uom', "Unit",
+        states={
+            'required': Bool(Eval('product')),
+            'readonly': _states['readonly'],
+            })
 
     del _states
 
@@ -562,6 +567,14 @@ class SaleOpportunityLine(sequence_ordered(), ModelSQL, ModelView):
     def __setup__(cls):
         super().__setup__()
         cls.__access__.add('opportunity')
+
+    @classmethod
+    def __register__(cls, module):
+        table_h = cls.__table_handler__(module)
+        super().__register__(module)
+        # Migration from 7.0: remove required on product and unit
+        table_h.not_null_action('product', 'remove')
+        table_h.not_null_action('unit', 'remove')
 
     @classmethod
     def get_opportunity_states(cls):
@@ -607,9 +620,13 @@ class SaleOpportunityLine(sequence_ordered(), ModelSQL, ModelView):
         pool = Pool()
         Lang = pool.get('ir.lang')
         lang = Lang.get()
-        return (lang.format_number_symbol(
-                self.quantity or 0, self.unit, digits=self.unit.digits)
-            + ' %s @ %s' % (self.product.rec_name, self.opportunity.rec_name))
+        if self.product:
+            return (lang.format_number_symbol(
+                    self.quantity or 0, self.unit, digits=self.unit.digits)
+                + ' %s @ %s' % (
+                    self.product.rec_name, self.opportunity.rec_name))
+        else:
+            return self.opportunity.rec_name
 
     @classmethod
     def search_rec_name(cls, name, clause):
