@@ -1,3 +1,4 @@
+* Make product optional on opportunity line
 * Restrict convert button to sale group
 
 Version 7.0.0 - 2023-10-30
